--- a/app/src/main/res/layout/fragment_dompet.xml
+++ b/app/src/main/res/layout/fragment_dompet.xml
@@ -194,9 +194,8 @@
         android:layout_height="235dp"
         android:layout_marginTop="271dp"
         android:layout_gravity="top|center_horizontal">
-
         <LinearLayout
-            android:id="@+id/itemcatatan"
+            android:id="@+id/catatanLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
