--- a/app/src/main/res/layout/activity_emas.xml
+++ b/app/src/main/res/layout/activity_emas.xml
@@ -2,19 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/emas"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EmasActivity">
 
     <TextView
-        android:id="@+id/totalTextView"
+        android:id="@+id/tabungantotalemas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Total Tabungan: 0"
-        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:text="Tanggal Prediksi"
         android:textSize="18sp"
-        android:padding="16dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/totalcatetanemas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="total catetan"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
