emas sesuai income expanse muncul, tinggal grafik

--- a/app/src/main/res/layout/activity_emas.xml
+++ b/app/src/main/res/layout/activity_emas.xml
@@ -29,4 +29,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/predictedPricesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Predicted Prices"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/totalcatetanemas"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
