grafik emas done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="utama">#00AB6B</color>
     <color name="button_green">#00FF00</color>
     <color name="teal_700">#008080</color> <!-- Atau warna lain yang Anda inginkan -->
+    <color name="purple_200">#BB86FC</color>
 
 
 
