--- a/app/src/main/res/layout/registrasiakun.xml
+++ b/app/src/main/res/layout/registrasiakun.xml
@@ -96,10 +96,10 @@
     <!-- TextView untuk logo -->
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="278dp"
-        android:layout_height="213dp"
-        android:layout_gravity="top|center_horizontal"
-        android:layout_marginTop="50dp"
+        android:layout_width="178dp"
+        android:layout_height="113dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="120dp"
         android:src="@drawable/logo" />
 
     <ImageView
