--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:layout_height="917dp"
     android:background="@drawable/container_android_compact">
 
-    <!-- Kontainer tombol Google Login -->
     <LinearLayout
         android:id="@+id/container_google_login"
         android:layout_width="wrap_content"
@@ -19,7 +18,6 @@
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
-        <!-- Logo Google -->
         <ImageView
             android:id="@+id/image_google_logo"
             android:layout_width="26dp"
@@ -28,7 +26,6 @@
             android:scaleType="centerInside"
             android:src="@drawable/image_google_logo" />
 
-        <!-- Tulisan Login dengan akun Google -->
         <TextView
             android:id="@+id/text_google_login"
             android:layout_width="wrap_content"
@@ -41,7 +38,6 @@
             android:focusable="true" />
     </LinearLayout>
 
-    <!-- EditText untuk email -->
     <EditText
         android:id="@+id/edit_email"
         android:layout_width="315dp"
@@ -56,9 +52,6 @@
         android:textColor="#FF000000"
         android:textSize="13dp" />
 
-    <!-- EditText untuk password -->
-
-    <!-- Background untuk tombol login -->
     <EditText
         android:id="@+id/edit_password"
         android:layout_width="315dp"
@@ -86,10 +79,6 @@
         android:padding="10dp"
         android:layout_marginBottom="10dp" />
 
-
-
-
-    <!-- TextView untuk judul halaman login -->
     <TextView
         android:id="@+id/text_login_account"
         android:layout_width="wrap_content"
@@ -106,7 +95,6 @@
         android:textColor="#FF000000"
         android:textSize="20dp" />
 
-    <!-- TextView untuk bagian 'Or sign up' -->
     <TextView
         android:id="@+id/text_or_sign_up"
         android:layout_width="wrap_content"
@@ -122,7 +110,6 @@
         android:textColor="#FF000000"
         android:textSize="13dp" />
 
-    <!-- TextView untuk prompt sign up -->
     <TextView
         android:id="@+id/text_sign_up_prompt"
         android:layout_width="wrap_content"
@@ -140,13 +127,11 @@
         android:textSize="13dp" />
 
 
-
-    <!-- TextView untuk logo -->
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="278dp"
-        android:layout_height="213dp"
-        android:layout_gravity="top|center_horizontal"
-        android:layout_marginTop="50dp"
+        android:layout_width="178dp"
+        android:layout_height="113dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="120dp"
         android:src="@drawable/logo" />
 </FrameLayout>
