--- a/app/src/main/res/layout/activity_popupcatatantabungan.xml
+++ b/app/src/main/res/layout/activity_popupcatatantabungan.xml
@@ -50,29 +50,22 @@
         android:src="@drawable/image_investment_selection" />
 
 
-
-
-
-
-
     <EditText
         android:id="@+id/edit_nama_catatan"
         android:layout_width="230dp"
         android:layout_height="50dp"
+        android:layout_gravity="top|left"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="120dp"
-        android:layout_gravity="top|left"
+        android:background="@drawable/image_rectangle33b"
         android:gravity="left|center_vertical"
         android:hint="Nama Catatan"
         android:inputType="text"
-        android:background="@drawable/image_rectangle33b"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="#FF000000"
-        android:textSize="13sp" />
-
-
-
+        android:textSize="13sp"
+        android:visibility="visible" />
 
     <EditText
         android:id="@+id/edit_nominal_pengeluaran"
@@ -155,7 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:layout_marginRight="67dp"
-        android:layout_marginTop="85.5dp"
+        android:layout_marginTop="90dp"
         android:layout_marginBottom="-0.5dp"
         android:layout_gravity="center_horizontal"
         android:gravity="left|center_vertical"
@@ -171,7 +164,7 @@
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:layout_marginLeft="67.5dp"
-        android:layout_marginTop="85.5dp"
+        android:layout_marginTop="90dp"
         android:layout_marginBottom="-0.5dp"
         android:layout_gravity="center_horizontal"
         android:gravity="left|center_vertical"
