--- a/app/src/main/res/layout/fragment_dompet.xml
+++ b/app/src/main/res/layout/fragment_dompet.xml
@@ -8,8 +8,6 @@
     android:layout_height="917dp"
     android:background="@drawable/drawable_shape">
 
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="25dp"
@@ -23,8 +21,6 @@
         android:text="Budgeting"
         android:textColor="#FF000000"
         android:textSize="20dp" />
-
-
 
     <ImageView
         android:layout_width="412dp"
@@ -40,7 +36,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="108dp"
         android:layout_gravity="top|left"
-        android:background="@drawable/drawable_shape_2"
+        android:background="@color/utama"
         android:scaleType="centerInside" />
 
     <ImageView
@@ -142,7 +138,7 @@
         android:maxLines="1"
         android:singleLine="true"
         android:text="Penghasilan"
-        android:textColor="#FF00AB6B"
+        android:textColor="@color/utama"
         android:textSize="10dp" />
 
     <TextView
@@ -157,7 +153,7 @@
         android:maxLines="1"
         android:singleLine="true"
         android:text="Penghasilan"
-        android:textColor="#FF00AB6B"
+        android:textColor="@color/utama"
         android:textSize="10dp" />
 
     <TextView
@@ -204,26 +200,6 @@
 
     </FrameLayout>
 
-    <ImageView
-        android:layout_width="58dp"
-        android:layout_height="58dp"
-        android:layout_marginLeft="339dp"
-        android:layout_marginTop="660dp"
-        android:layout_gravity="top|left"
-        android:background="@drawable/drawable_shape_3"
-        android:scaleType="centerInside" />
-
-    <ImageView
-        android:id="@+id/uploadcattab"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="355dp"
-        android:layout_marginRight="31dp"
-        android:layout_marginTop="680dp"
-        android:layout_marginBottom="98dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/drawable_image_10" />
-
     <TextView
         android:id="@+id/textViewTabungan"
         android:layout_width="296dp"
@@ -239,6 +215,18 @@
         android:text="Tabungan"
         android:textColor="#FF000000"
         android:textSize="16dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/uploadcattab"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="755dp"
+        android:layout_marginBottom="98dp"
+        android:layout_marginStart="325dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/utama"
+        android:scaleType="centerInside"
+        android:src="@drawable/drawable_image_10" />
 
     <FrameLayout
         android:layout_width="352dp"
