--- a/app/src/main/res/layout/activity_aces_saham.xml
+++ b/app/src/main/res/layout/activity_aces_saham.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AcesSaham">
+    tools:context=".NamaSaham.AcesSaham">
 
     <TextView
         android:id="@+id/prediction_date"
