--- a/app/src/main/res/layout/activity_bbni_saham.xml
+++ b/app/src/main/res/layout/activity_bbni_saham.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".namasaham.AndroSaham">
+    tools:context=".namasaham.BbniSaham">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
