nama saham di home

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,6 +77,14 @@
             android:textColor="#FF000000"
             android:textSize="16sp" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/stockRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="470dp"
+            android:layout_marginTop="720dp"
+            android:orientation="vertical" />
+
+
         <TextView
             android:id="@+id/greetingTextView"
             android:layout_width="match_parent"
