--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="purple_200">#BB86FC</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
+    <color name="gray">#696969</color>
 </resources>
