--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,92 +5,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/drawable_shape"
-    android:padding="16dp">
+    android:background="@drawable/drawable_shape">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <!-- Greeting Section -->
+        <FrameLayout
+            android:layout_width="352dp"
+            android:layout_height="252dp"
+            android:layout_gravity="top|center_horizontal"
+            android:layout_marginTop="173dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="400dp"
+                android:layout_height="221dp"
+                android:layout_marginTop="26dp"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal" />
+
+            <TextView
+                android:layout_width="296dp"
+                android:layout_height="21dp"
+                android:layout_gravity="top|left"
+                android:layout_marginTop="-1dp"
+                android:layout_marginBottom="-1dp"
+                android:gravity="left|center_vertical"
+                android:includeFontPadding="false"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="Artikel"
+                android:textColor="#FF000000"
+                android:textSize="16sp" />
+        </FrameLayout>
+
         <TextView
-            android:id="@+id/greetingTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:paddingVertical="8dp"
-            android:text="Hello, User!"
-            android:textColor="#FF000000"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="8dp" />
-
-        <!-- Artikel Section -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Artikel"
-            android:textColor="#FF000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="12dp"
-        android:layout_marginBottom="4dp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="260dp"
-        android:layout_marginBottom="8dp"
-        android:clipToPadding="false"
-        android:padding="6dp"
-        android:background="@android:color/white"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_news" />
-
-        <!-- Your Plane Section -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="296dp"
+            android:layout_height="21dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="430dp"
+            android:layout_marginBottom="-1dp"
+            android:layout_gravity="top|left"
+            android:gravity="left|center_vertical"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:singleLine="true"
             android:text="Your Plane"
             android:textColor="#FF000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"
-        android:layout_marginBottom="4dp" />
+            android:textSize="16sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/menuRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-        android:clipToPadding="false"
-        android:padding="6dp"
-        android:background="@android:color/white"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
-        tools:listitem="@layout/item_menu" />
-
+            android:layout_marginTop="450dp"
+            android:layout_gravity="top|left" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="296dp"
+            android:layout_height="21dp"
+            android:layout_gravity="top|left"
+            android:layout_marginLeft="29dp"
+            android:layout_marginTop="680dp"
+            android:layout_marginBottom="-1dp"
+            android:gravity="left|center_vertical"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:singleLine="true"
             android:text="Top Reksa Dana (Pasar Uang)"
             android:textColor="#FF000000"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"
-        android:layout_marginBottom="4dp" />
+            android:textSize="16sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/stockRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-        android:clipToPadding="false"
-        android:padding="6dp"
-        android:background="@android:color/white"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_stock" />
-    </LinearLayout>
+            android:layout_height="470dp"
+            android:layout_marginTop="720dp"
+            android:orientation="vertical" />
+
+
+        <TextView
+            android:id="@+id/greetingTextView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="60dp"
+            android:gravity="left"
+            android:textColor="#FF000000"
+            android:textSize="18sp" />
+    </FrameLayout>
+
 </ScrollView>
