--- a/app/src/main/res/drawable/gradient_fill.xml
+++ b/app/src/main/res/drawable/gradient_fill.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@android:color/holo_red_light"
-        android:endColor="@android:color/transparent"
-        android:angle="90"/>
+        android:startColor="#00FF00"
+    android:endColor="#FFFFFF"
+    android:angle="270" />
 </shape>
