grafik emas ganti warna done.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="purple_200">#BB86FC</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
+    <color name="emas">#FFC100</color>
 </resources>
+
